#minor updates for email sender